<resources>
    <string name="app_name">Chatty</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="sample_message">Hello!</string>
    <string name="create_group">Create Group</string>
    <string name="add_person">Add Person</string>
    <string name="search_contact">Search contact</string>
    <string name="search_for_user">Search for user</string>
    <string name="display_name">Display Name</string>
</resources>
